html2rdf/tests/snapshots/test_cases__rdfa1.1-lite__xhtml5__0147.xhtml_processor_graph.snap
---
source: html2rdf/tests/test-cases.rs
expression: "utils::serialize_normalized_graph(processor_graph, base.as_str(),)"
---

